@@ -16,6 +16,7 @@ jar {
         attributes(
             'Premain-Class': 'middleman.agent.MiddleManAgent',
             'Agent-Class': 'middleman.agent.MiddleManAgent',
+            'Main-Class': 'middleman.agent.AttachMain',
             'Can-Redefine-Classes': 'false',
             'Can-Retransform-Classes': 'false'
         )
@@ -24,4 +25,5 @@ jar {
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.compilerArgs += ['--add-modules', 'jdk.attach']
 }
